--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.17",
-    "@subql/contract-sdk": "0.1.1-3",
+    "@subql/contract-sdk": "^0.1.1-28",
     "@subql/react-ui": "^1.0.1-19",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
