--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.17",
-    "@subql/contract-sdk": "^0.1.1-32",
-    "@subql/react-ui": "^1.0.1-19",
+    "@subql/contract-sdk": "0.1.1-31",
+    "@subql/react-ui": "^1.0.1-21",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
