--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.17",
+    "@patternfly/react-log-viewer": "^4.43.19",
     "@subql/contract-sdk": "0.1.1-47",
     "@subql/react-ui": "^1.0.1-21",
     "@testing-library/jest-dom": "^5.11.4",
