Resolve check allowance issue

--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,7 @@
   "plugins": ["react", "@typescript-eslint", "import", "simple-import-sort", "unused-imports", "react-hooks", "header"],
   "rules": {
     "no-use-before-define": "off",
-    "@typescript-eslint/no-use-before-define": ["error"],
+    "@typescript-eslint/no-use-before-define": ["off"],
     "@typescript-eslint/explicit-module-boundary-types": ["off"],
     "react/jsx-filename-extension": ["warn", { "extensions": [".tsx"] }],
     "react/jsx-uses-react": "off",
