--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.17",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.1",
     "@patternfly/react-log-viewer": "^4.43.19",
     "@subql/contract-sdk": "0.1.1-47",
     "@subql/react-ui": "^1.0.1-21",
