--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -9,6 +9,8 @@ jobs:
     dev-build:
         if: github.event.action == 'closed' && github.event.pull_request.merged == true
         runs-on: ubuntu-latest
+        env:
+            SENTRY_DSN: ${{ secrets.DEV_SENTRY_DSN }}
         steps:
             - uses: actions/checkout@v2
             - uses: actions/setup-node@v1
