--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,8 @@
     "plugin:@typescript-eslint/recommended",
     "prettier",
     "prettier/prettier",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "plugin:import/typescript"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
