--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "formik": "^2.2.9",
     "graphql": "^16.0.1",
     "ipfs-http-client": "^54.0.2",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-device-detect": "^2.1.2",
@@ -57,6 +58,7 @@
     "@sentry/types": "^6.19.6",
     "@types/antd": "^1.0.0",
     "@types/jest": "^26.0.15",
+    "@types/js-yaml": "^4.0.5",
     "@types/lodash": "^4.14.177",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
