--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@patternfly/react-log-viewer": "^4.43.19",
     "@sentry/react": "^6.19.6",
     "@sentry/tracing": "^6.19.6",
-    "@subql/contract-sdk": "0.6.1-2",
+    "@subql/contract-sdk": "0.7.0",
     "@subql/network-clients": "0.1.1-7",
     "@subql/react-ui": "^1.0.1-21",
     "@testing-library/jest-dom": "^5.11.4",
